--- a/README
+++ b/README
@@ -1,1 +1,13 @@
 翻譯 PS1 倫敦精靈  遊戲 偉大計劃
+
+現在的年輕人已經遺忘了什麼才是真正的遊戲
+盲目地追求 FPS, 畫質...
+市面上也一直充斥著這些精美但又如此空洞的遊戲。。。
+
+所以！
+翻譯這個遊戲的主要目的，
+就是
+
+可以讓我躺著玩。(￣￢￣) 
+
+(繼...)
